trunk/Archive2/70/712e29df8a66b9/output
main.cpp: In function 'std::string flipConst(std::string&)':
main.cpp:42:91: error: 'std::string' has no member named 'drop'
             return std::string(str.begin() + const_token.size(), str.end()) + const_token.drop();
                                                                                           ^
